--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.1.1",
     "@material-tailwind/react": "^2.1.8",
+    "flowbite-react": "^0.7.2",
     "next": "14.0.4",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "react": "^18",
