--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "prettier-plugin-tailwindcss": "^0.5.11",
     "react": "^18",
     "react-dom": "^18",
+    "react-responsive": "^9.0.2",
     "swiper": "^11.0.5",
     "tw-elements": "^1.1.0"
   },
