--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^2.1.1",
     "@material-tailwind/react": "^2.1.8",
     "flowbite-react": "^0.7.2",
+    "framer-motion": "^11.0.24",
     "next": "14.0.4",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "react": "^18",
